<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TeamStatisticsFragment">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/cardsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:columnCount="3"
        app:rowCount="2"
        app:useDefaultMargins="true">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_column="0"
            app:layout_columnWeight="4"
            app:layout_row="0"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/scoredPowerCellsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scored_power_cells"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/scoredPowerCellsLineChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_column="1"
            app:layout_columnWeight="2"
            app:layout_row="0"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/endgameActionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/endgame_action"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/endgameActionPieChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_column="2"
            app:layout_columnWeight="2"
            app:layout_row="0"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movesToInitiationLineTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moves_to_initiation_line"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/movesToInitiationlinePieChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_column="0"
            app:layout_columnWeight="2"
            app:layout_row="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ingameActionsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/in_game_actions"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <androidx.gridlayout.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    app:columnCount="2"
                    app:rowCount="1">

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/rotationControlPieChart"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_rowWeight="1" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/positionControlPieChart"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_rowWeight="1" />

                </androidx.gridlayout.widget.GridLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_column="1"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/generalTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/climb_duration"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/climbDurationLineChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</FrameLayout>